# cv-reformatter-prototype

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
app/: __init__.py  main.py
app/extraction/: __init__.py  candidate_schema.py  llm_extractor.py  normalizer.py  prompts.py
app/generation/: __init__.py  docx_renderer.py  pdf_exporter.py  submission_summary_renderer.py  target_format_blueprint.py  template_mapper.py
app/ingestion/: __init__.py  docx_reader.py  file_validator.py  pdf_reader.py
app/storage/: __init__.py  local_db.py
app/templates/apex_standard/: blueprint.json
app/templates/client_10554236_v1/: blueprint.json
app/ui/: __init__.py  streamlit_app.py
app/validation/: __init__.py  followup_message_generator.py  missing_fields.py  profile_validator.py
cv_reformatter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: FRONTEND_BACKEND_ALIGNMENT.md  MVP_BUILD_ROADMAP.md  MVP_PRODUCT_SPEC.md  PDF_TEMPLATE_RECONSTRUCTION.md
frontend/: index.html  package-lock.json  package.json
frontend/public/: sample-resume.docx
frontend/src/: App.css  App.tsx  i18n.ts  index.css  types.ts
frontend/src/locales/: en.json  (+1 more)
scripts/: run_backend_template_smoke.py  run_demo.py
tests/: test_api_generate.py  test_api_process.py  test_candidate_schema.py  test_dataset_smoke.py  test_docx_reader.py  test_docx_renderer.py  test_llm_extractor.py  test_local_db.py  test_missing_fields.py  test_pdf_exporter.py  test_pdf_reader.py  test_real_llm_smoke.py  test_target_format_blueprint.py  test_template_mapper.py
tests/local_datasets/: README.md
(+22 files in other folders)
